--- a/client/src/styles/LandingPage.css
+++ b/client/src/styles/LandingPage.css
@@ -56,6 +56,7 @@
 .hathor-silhouette {
   width: 80%;
   height: 80%;
+  background-image: url('./images/hathor-logo-01.png');
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
@@ -65,6 +66,7 @@
 /* Dark mode logo */
 @media (prefers-color-scheme: dark) {
   .hathor-silhouette {
+    background-image: url('./images/hathor-logo-02.png');
     filter: drop-shadow(0 0 10px var(--primary-color));
   }
 }
